fix add to cart button aligning

--- a/src/components/SectionText/SectionText.scss
+++ b/src/components/SectionText/SectionText.scss
@@ -32,12 +32,16 @@
     }
   }
   &__incart {
-    display: inline-block;
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    width: 100%;
     font-size: 0.6rem;
   }
 
   &__button-wrapper {
     text-align: center;
+    position: relative;
   }
 }
 .section__text {
